add get_identity_certificate
